# ReVision

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/: puzzles.json
src/: ReVision.cpp  app.cpp  app.hpp  ft2.hpp  ft2_text_render.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  puzzle.cpp  puzzle.hpp  state.cpp  state.hpp  util.hpp
src/gen_puzzle_data/: gen_puzzle_data.py
